auto-test/tests/chapter_15/invalid_types/incompatible_elem_type_compound_init.c
int main(void)
{
    
    int *arr[3] = {0, 0, 1.0};
}